# ViT-Ctr

./: .gitignore  CLAUDE.md  README.md  ViT-Ctr_Phase1-5_Summary.docx  ViT-Ctr_Phase1-5_Summary.pptx  app.py  package-lock.json  pyproject.toml  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/: bootstrap-autodl-workflow-optimization.md  bootstrap-full-rewrite.md  bootstrap-uq-audit.md  knowledge-base.md
.planning/research/: ARCHITECTURE-CN.md  ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK-CN.md  STACK.md  SUMMARY.md
colab/: 03-bootstrap-autodl.ipynb  03-bootstrap-colab.ipynb  03-train-autodl.ipynb  03-train-colab.ipynb  autodl_bootstrap.py
data/literature/: literature_ctr.csv  (+1 more)
notebooks/: 01_ode_validation.py  03-debug-local.ipynb  03-evaluate.ipynb  04-validate.ipynb
paper/: manuscript.tex  manuscript_cn.docx  manuscript_en.docx  references.bib  supporting_information.tex
scripts/: autodl-config.bat  autodl-download.bat  autodl-run.bat  autodl-status.bat  autodl-sync.bat  generate_docx.py  generate_figures.py  generate_ppt_report.js  generate_word_report.js  upload_to_gdrive.py  validate_dataset.py
src/: app_utils.py  bootstrap.py  ctfp_encoder.py  dataset.py  dataset_generator.py  diagnostic.py  evaluate.py  literature_validation.py  model.py  raft_ode.py  train.py
tests/: conftest.py  test_app_utils.py  test_bootstrap.py  test_ctfp_encoder.py  test_dataset_generator.py  test_evaluate.py  test_literature_validation.py  test_model.py  test_raft_ode.py  test_split.py  test_train.py  test_visualization.py
(+79 files in other folders)
